# antimeridian-assessment

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: logic.py  main.py  structures.py
tests/: test_api.py  test_logic.py
